update shop page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li>
-            <a href="cart.html"><i class="fa-solid fa-cart-shopping cart"></i></a>
+            <a id="lg-bag" href="cart.html"><i class="fa-solid fa-cart-shopping cart"></i></a>
           </li>
+          <a href="#" id="close"><i class="fa-solid fa-x"></i></a>
         </ul>
+      </div>
+      <div id="mobile">
+        <a href="cart.html"><i class="fa-solid fa-bag-shopping cart"></i></a>
+        <i id="bar" class="fa-solid fa-bars"></i>
       </div>
     </section>
 
@@ -202,73 +207,10 @@
           <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
-          <img src="img/products/f1.jpg" alt="">
-          <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-shrit</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4 class="pro-price">$78</h4> 
-          </div>
-          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-        </div>
+       
 
-        <div class="pro">
-          <img src="img/products/f1.jpg" alt="">
-          <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-shrit</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4 class="pro-price">$78</h4> 
-          </div>
-          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-        </div>
+      
 
-        <div class="pro">
-          <img src="img/products/f1.jpg" alt="">
-          <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-shrit</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4 class="pro-price">$78</h4> 
-          </div>
-          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-        </div>
-
-        <div class="pro">
-          <img src="img/products/f1.jpg" alt="">
-          <div class="des">
-            <span>Adidas</span>
-            <h5>Cartoon Astronaut T-shrit</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4 class="pro-price">$78</h4> 
-          </div>
-          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-        </div>
       </div>
     </section>
 
@@ -295,7 +237,7 @@
       </div>
     </section>
 
-    <section id="sm-banner-3" class="section-p1 section-m1">
+    <section id="sm-banner-3" class="section-p1">
       <div class="banner-box">
         <h3>Crazy deals</h3>
         <h2>Buy 1 get 1 free</h2>
@@ -312,6 +254,63 @@
       </div>
 
     </section>
+
+    <section id="newsletters" class="section-m1">
+      <div class="news-text">
+        <h4>Sign Up For NewSletters</h4>
+        <p>Get e-mail updates about our latest shop and <span>special offers</span></p>
+      </div>
+
+      <div class="form">
+        <input type="text" placeholder="Your email address">
+        <button class="normal">Sign Up</button>
+      </div>
+    </section>
+    <footer class="section-p1">
+      <div class="col col-1">
+        <img class="logo" src="img/logo.png" alt="">
+        <h4>Contact</h4>
+        <p><strong>Address: </strong>562 Wellington Road, Street 32, San Francisco</p>
+        <p><strong>Phone: </strong>+84934 922 475</p>
+        <p><strong>Hours: </strong>10:00 - 18:00, Mon - Fri</p>
+        <div class="follow">
+          <h4>Follow us</h4>
+          <div class="icon">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-tiktok"></i>
+          </div>
+        </div>
+      </div>
+      <div class="col ">
+        <h4>About us</h4>
+        <a href="#">Delivery information</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms and Conditions</a>
+        <a href="#">Contact us</a>
+      </div>
+      <div class="col">
+        <h4>My Account</h4>
+        <a href="#">Delivery information</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms and Conditions</a>
+        <a href="#">Contact us</a>
+      </div>
+      <div class="col install">
+        <h4>Install App</h4>
+        <p>From Appstore and Gooogle Play</p>
+        <div class="row">
+          <img src="img/pay/app.jpg" alt="">
+          <img src="img/pay/play.jpg" alt="">
+        </div>
+        <p>Secured Payment Gateways</p>
+        <img src="img/pay/pay.png" alt="">
+      </div>
+      <div class="copyright">
+        <p>2023, TechTech Shop's Website Devloper - Dang Thien Vu</p>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
