--- a/shop.html
+++ b/shop.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech Ecommerce Tutorial</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
+    <title>Cẩm Ly's Shop</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
+    
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -37,7 +36,7 @@
       </div>
     </section>
 
-    <section id="shop-page-header">
+    <section id="page-header">
       <h2>Super Value Deals</h2>
       <p>Save more with coupon</p>
     </section>
@@ -46,7 +45,7 @@
       <h2>Feature Product</h2>
       <p>Summer Collection New Morden Design</p>
       <div class="pro-container">
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img src="img/products/f1.jpg" alt="" />
           <div class="des">
             <span>Adidas</span>
@@ -272,6 +271,7 @@
         <button class="normal">Sign Up</button>
       </div>
     </section>
+
     <footer class="section-p1">
       <div class="col col-1">
         <img class="logo" src="img/logo.png" alt="" />
@@ -320,6 +320,7 @@
         <p>2023, TechTech Shop's Website Devloper - Dang Thien Vu</p>
       </div>
     </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
