--- a/blog.html
+++ b/blog.html
@@ -41,14 +41,46 @@
       <p>More details and fun story</p>
     </section>
 
-   
-
+    <section id="blog">
+      <div class="blog-box">
+        <div class="blog-img">
+          <img src="img/blog/b1.jpg" alt="">
+        </div>
+        <div class="blog-details">
+          <h4>Cai Tieu De Ne homie</h2>
+          <p>viet cai gi vo day cung duoc homie</p>
+          <a href="#">CONTINUE READING</a>
+        </div>
+        <h1>13/02</h1>
+      </div>
+      <div class="blog-box">
+        <div class="blog-img">
+          <img src="img/blog/b2.jpg" alt="">
+        </div>
+        <div class="blog-details">
+          <h4>Cai Tieu De Ne homie</h2>
+          <p>viet cai gi vo day cung duoc homie</p>
+          <a href="#">CONTINUE READING</a>
+        </div>
+        <h1>13/02</h1>
+      </div>
+      <div class="blog-box">
+        <div class="blog-img">
+          <img src="img/blog/b3.jpg" alt="">
+        </div>
+        <div class="blog-details">
+          <h4>Cai Tieu De Ne homie</h2>
+          <p>viet cai gi vo day cung duoc homie</p>
+          <a href="#">CONTINUE READING</a>
+        </div>
+        <h1>13/02</h1>
+      </div>
+    </section>
     <section id="pagination" class="section-p1">
       <a href="#">1</a>
       <a href="#">2</a>
       <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
     </section>
-
     <section id="newsletters" class="section-m1 section-p1">
       <div class="news-text">
         <h4>Sign Up For NewSletters</h4>
