--- a/about.html
+++ b/about.html
@@ -41,11 +41,49 @@
       <p>More details and fun story</p>
     </section>
 
+    <section id="about-head" class="section-p1">
+      <img src="img/about/a6.jpg" alt="">
+      <div>
+        <h2>Day la con nao</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum consectetur perferendis unde dolore eligendi quos cum est odit placeat maiores! Veritatis omnis quos sunt cum nihil similique obcaecati vero id.</p>
+        <abbr title="">Create something you want</abbr>
+        <br><br>
+        <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%">Create something you want</marquee>
+      </div>
+    </section>
+    <section id="about-app" class="section-p1">
+      <h1>Download my <a href="">App</a></h1>
+      <div class="video">
+        <video autoplay muted loop src="img/about/1.mp4"></video>
+      </div>
+    </section>
+
     
-    <section id="pagination" class="section-p1">
-      <a href="#">1</a>
-      <a href="#">2</a>
-      <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+    <section id="feature" class="section-p1">
+      <div class="fe-box">
+        <img src="img/features/f1.png" alt="">
+        <h6>free shipping</h6>
+      </div>
+      <div class="fe-box">
+        <img src="img/features/f2.png" alt="">
+        <h6>free shipping</h6>
+      </div>
+      <div class="fe-box">
+        <img src="img/features/f3.png" alt="">
+        <h6>free shipping</h6>
+      </div>
+      <div class="fe-box">
+        <img src="img/features/f4.png" alt="">
+        <h6>free shipping</h6>
+      </div>
+      <div class="fe-box">
+        <img src="img/features/f5.png" alt="">
+        <h6>free shipping</h6>
+      </div>
+      <div class="fe-box">
+        <img src="img/features/f6.png" alt="">
+        <h6>free shipping</h6>
+      </div>
     </section>
     <section id="newsletters" class="section-m1 section-p1">
       <div class="news-text">
